--- a/_posts/2022-07-05-OSAP.md
+++ b/_posts/2022-07-05-OSAP.md
@@ -9,4 +9,4 @@ tag: Quantitative Analysis
 We use CSMAR data set
 
 # Code
-> $ get clone https://github.com/open-assetpricing-china/stock-predictors.git
+> $ git clone https://github.com/open-assetpricing-china/stock-predictors.git
