--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -8,16 +8,25 @@ tag: Quantitative Analysis
 ### predictors 
 >Contrasting previous studies for the U.S. market, <font color=red>liquidity</font> emerges as the
 >most important predictor, leading us to examine the impact of <font color=red>transaction costs</font> closely.
->[Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 ### retail investors
 >The retail investors' dominating presence positively affects <font color=red>short-term predictability</font>, 
 >particularly for <font color=red> small stocks </font>. 
->[Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 ### large stocks and state-owned enterprises
 >Another feature that distinguishes the Chinese from the U.S. market is the high 
 >predictability of large stocks and state-owned enterprises over longer horizons. 
 >The out-of-sample performance remains economically significant 
 >after <font color=red> transaction costs</font>.
->[Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
+
+### market size
+>As of October 2020, the total value of China's stock market has climbed to 
+>a record high of more than $10 trillion, as the country's accelerating economic 
+>recovery from the pandemic has surpassed the previous high reached during an 
+>equity bubble five years ago, making it the second-largest in the 
+>world, after the U.S. at nearly $39 trillion.
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
