--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -8,18 +8,32 @@ tag: Quantitative Analysis
 ### predictors 
 >Contrasting previous studies for the U.S. market, <font color=red>liquidity</font> emerges as the
 >most important predictor, leading us to examine the impact of <font color=red>transaction costs</font> closely.
+>
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 ### retail investors
 >The retail investors' dominating presence positively affects <font color=red>short-term predictability</font>, 
 >particularly for <font color=red> small stocks </font>. 
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+> ===========================
+>
+> Chinese stock market is dominated by retail investors. The <font color=red>speculative</font> 
+> and short-term trading motives of many retail investors may lead to 
+>increased <font color=red>turnover</font>. 
+> * According to the 2019 yearbook of the Shanghai Stock Exchange, there are 214.5 million
+    investors in china, 213.8 million are <font color=red>individual investors</font>, and 0.7 million are 
+    <font color=red>institutional investors</font> 
+> * the value of shares traded stood at 224% of <font color=red>market capitalization</font>
+  in 2019, compared to 108% for the U.S. market.
+>
+> Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 ### large stocks and state-owned enterprises
 >Another feature that distinguishes the Chinese from the U.S. market is the high 
 >predictability of large stocks and state-owned enterprises over longer horizons. 
 >The out-of-sample performance remains economically significant 
 >after <font color=red> transaction costs</font>.
+>
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 
@@ -29,4 +43,11 @@ tag: Quantitative Analysis
 >recovery from the pandemic has surpassed the previous high reached during an 
 >equity bubble five years ago, making it the second-largest in the 
 >world, after the U.S. at nearly $39 trillion.
+>
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
+
+### Three key features in chinese market
+> * Chinese stock market is dominated by retail investors.
+> 
+>
