--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -26,6 +26,10 @@ tag: Quantitative Analysis
 > * the value of shares traded stood at 224% of <font color=red>market capitalization</font>
   in 2019, compared to 108% for the U.S. market.
 >
+> =====================================
+> creates heightened volatility that may disconnect share prices from    
+> the underlying economic conditions.
+>
 > Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 ### large stocks and state-owned enterprises
@@ -51,3 +55,4 @@ tag: Quantitative Analysis
 > * Chinese stock market is dominated by retail investors.
 > 
 >
+
