--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -51,8 +51,32 @@ tag: Quantitative Analysis
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 
+### politic 
+>(1)For example, the process of IPOs and seasonal stock offerings is highly political, 
+>and companies cannot predict when the market value will be high.
+>
+>(2)On the other hand, <font color=red>listed companies</font>, especially state-owned enterprises (SOEs), 
+>are prevented from shares buy-back when share prices fall below fundamental values.
+These automatic market correction mechanisms are therefore affected by government-oriented restrictions
+>
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
+### long-short strategies
+> While most of the literature on <font color=red>factor investing</font> in
+> U.S. and European markets rely on long-short strategies, such a strategy is 
+> less realistic for Chinese market. Hence, we also analyze <font color=red> long-only portfolios</font>
+> which are more relevant from a practitioner's viewpoint.
+>
+> Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
 ### Three key features in chinese market
 > * Chinese stock market is dominated by retail investors.
 > 
+> * a key characteristic of China's financial system from an institutional 
+  perspective is that it is centrally controlled, bank-dominated, and uniquely 
+  relationship-driven. 
 >
+> * The chinese market has a limited history of short sales.
+>
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
