--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -59,6 +59,10 @@ tag: Quantitative Analysis
 >are prevented from shares buy-back when share prices fall below fundamental values.
 These automatic market correction mechanisms are therefore affected by government-oriented restrictions
 >
+>(3)Given that China has been experiencing a highly dynamic development through a series of structural breaks, implementing various 
+financial reforms, and expanding its capital markets' openness, we conjecture that highly 
+fiexible methods are required to account for the Chinese market's specificity.
+>
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 ### long-short strategies
@@ -68,6 +72,15 @@ These automatic market correction mechanisms are therefore affected by governmen
 > which are more relevant from a practitioner's viewpoint.
 >
 > Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
+### factor investing
+> As of today, there is no large database of factor returns available for the Chinese market.
+> Therefore, we contribute to the research on empirical asset pricing in 
+China by building a unique and comprehensive set of factors
+>
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
+
 
 ### Three key features in chinese market
 > * Chinese stock market is dominated by retail investors.
