--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -80,7 +80,21 @@ China by building a unique and comprehensive set of factors
 >
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
-
+### machine learning
+>A rapidly growing number of studies examine the cross-section and the 
+>time-series of stock returns with machine learning tools, predominantly 
+>focusing on the U.S. market.
+>
+>Their results suggest that machine learning improves the description of expected return and, 
+>when applied to portfolio construction, performance improvements arise most prominently among 
+>the more sophisticated models and are due in large part to the allowance of non-linear predictor 
+>interactions that are missed by simpler methods
+>
+>Although machine learning may substantially improve the pricing of assets, Arnott et al. (2019), 
+>Gu et al. (2020b), and Israel et al. (2020), among others, 
+>also point out that these methods cannot identify <font color=red>deep fundamental economic principles</font>.
+>
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 ### Three key features in chinese market
 > * Chinese stock market is dominated by retail investors.
