--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -26,9 +26,15 @@ tag: Quantitative Analysis
 > * the value of shares traded stood at 224% of <font color=red>market capitalization</font>
   in 2019, compared to 108% for the U.S. market.
 >
-> =====================================
+>=================================================
+>
 > creates heightened volatility that may disconnect share prices from    
 > the underlying economic conditions.
+>
+>=================================================
+>
+> Especially the large proportion of small investors with <font color=red>speculative short-term behavior</font>, 
+> make this market a highly attractive target for applying <font color=red>modern machine learning</font> techniques
 >
 > Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
@@ -95,6 +101,16 @@ China by building a unique and comprehensive set of factors
 >also point out that these methods cannot identify <font color=red>deep fundamental economic principles</font>.
 >
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
+
+### R^2
+> Comparing the out-of-sample R^2 with studies in the U.S. market, the Chinese 
+> market reveals substantially more predictability. 
+>
+> R^2 has <font color=red>some limitations for model selection</font>
+> (R^2 并不能作为衡量所有机器学习模型的一个普适的指标)
+>Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
 
 ### Three key features in chinese market
 > * Chinese stock market is dominated by retail investors.
