--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -18,3 +18,6 @@ tag: reading notes of financial studying
 >
 >(3) Comparing the out-of-sample R^2 with studies in the U.S. market, 
 >the Chinese market reveals substantially more predictability. 
+
+### Methods
+> (1) observe the market liquidity 
