--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -18,14 +18,38 @@ tag: reading notes of financial studying
 >
 >(3) Comparing the out-of-sample R^2 with studies in the U.S. market, 
 >the Chinese market reveals substantially more predictability. 
+>
+>(4) out-of-sample predictability.
+>
+>(5) unconditional and conditional predictive ability test.
+>
+>(6) explores whether predictability translates into portfolio gains.
+>
 
 ### other results
 > We also find that predictability of SOEs (国有企业) in terms of out-of-sample predictive R^2 
 > is <font color=red>weaker</font> than for <font color=red>non-SOEs</font> at 
 >a <font color=red>monthly prediction horizon</font>, which confirms the SOE's reputation of 
 >being <font color=red>non-transparent</font> (国企的声誉并不透明). 
+>
+>Our results indicate that also that a long-only portfolio can provide substantial and, 
+>even after including transaction costs, economically signicant performance
+> (我们的结果还表明，一个只做多的投资组合可以提供实质性的、甚至包括交易成本在内的经济显著的业绩 )
 
 
 
-### Methods
-> (1) observe the market liquidity 
+### Methods and Data
+#### Methods
+* (1) Apply the empirical design of Gu et al. (2020b) to the Chinese market.
+
+#### Data
+* (1) WIND
+
+* (2) CSMAR
+
+* (3) Predictors: [Green et al. 2017](https://doi.org/10.1093/rfs/hhx019).
+The characteristic that provide independent information about average US monthly stock return.
+A large collection of stock-level predictive characteristic based on the variable definitions in
+the original literature listed in [Green et al. 2017](https://doi.org/10.1093/rfs/hhx019), 
+and the literature on China-specific factors. 
+ 
