--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -85,6 +85,15 @@ fiexible methods are required to account for the Chinese market's specificity.
 > less realistic for Chinese market. Hence, we also analyze <font color=red> long-only portfolios</font>
 > which are more relevant from a practitioner's viewpoint.
 >
+>Given the <font color=red>short-selling constraints</font> in China, we wonder how much <font color=red>value-added</font>
+>can be enjoyed in <font color=red>long-only mandates</font>. 
+>Many of the previous literature results relate to the performance 
+>of portfolios that include long and short positions. While such practices allow us to 
+>evaluate a signal's predictive power, not all stocks are available for shorting at all times, 
+>and the costs of shorting can be substantial.
+> (以前的许多文献结果都与包括多头和空头头寸的投资组合的绩效有关。虽然这种做法允许我们评估信号的预测能力，
+>但并非所有股票都可以随时做空，做空的成本可能相当高。 )
+>
 > Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
 ### factor investing
@@ -124,6 +133,12 @@ China by building a unique and comprehensive set of factors
 >being <font color=red>non-transparent</font> (国企的声誉并不透明). 
 >
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
+
+### events
+> 2015 crash
+>
+> COVID-19 pandemic
+
 
 
 ### Three key features in chinese market
