--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -52,4 +52,15 @@ The characteristic that provide independent information about average US monthly
 A large collection of stock-level predictive characteristic based on the variable definitions in
 the original literature listed in [Green et al. 2017](https://doi.org/10.1093/rfs/hhx019), 
 and the literature on China-specific factors. 
+
+#### Data process
+* (1) classify predictors
+> 90 * 1 vector of stock-level characteristics, 11 * 1 vector of macroeconomic predictors,
+> 80 * 1 vector of dummy variables
+
+
+* (2) interaction term between two groups of predictors
+> Using <font color=red>Kronecker product</font> (直乘) to represent the interaction terms 
+> between stock-level characteristics and the eleven macroeconomic predictors:
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/kron_predictors.jpg)
  
