--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -42,6 +42,23 @@ tag: reading notes of financial studying
 #### Methods
 * (1) Apply the empirical design of Gu et al. (2020b) to the Chinese market.
 
+* (2) linear models:
+> ordinary least squares regression (OLS)
+>
+> partial least squares (PLS)
+>
+> least absolute shrinkage and selection operator (LASSO)
+>
+> elastic net (Enet) 
+>
+> gradient boosted regression trees (GBRT)
+>
+> random forest (RF)
+>
+> variable subsample aggregation (VASA)
+>
+> neutral networks with only 5 layers (NN1 - NN5)
+
 #### Data
 * (1) WIND
 
@@ -63,4 +80,13 @@ and the literature on China-specific factors.
 > Using <font color=red>Kronecker product</font> (直乘) to represent the interaction terms 
 > between stock-level characteristics and the eleven macroeconomic predictors:
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/kron_predictors.jpg)
- 
+
+
+#### Empirical analysis
+
+* We start exploring our models' prediction performance via out-of-sample 
+predictive $$R^2$$ and discuss predictability across different subsamples of our data.
+
+* Tables:
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table1.jpg) 
+> 
