--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -131,4 +131,7 @@ for all stocks in all periods.
 > * 表明机器学习方法可以在更长的时间内成功地隔离持续风险溢价: We find that the annual
 out-of-sample R^2 are higher than their monthly counterparts, indicating machine learning
 methods can successfully isolate persistent risk premiums at longer horizons.  
+> *我们将短期可预测性（尤其是小型股）归因于散户投资者在中国股市中的突出作用。
+正如我们稍后将看到的，在较短的视野内，神经网络更加重视小盘股的波动性和动量相关变量，
+这可能反映了散户投资者的短期投机行为，以及他们的知名度也就是喜欢优先交易小型股 
  
