--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -87,7 +87,7 @@ and the literature on China-specific factors.
 * We start exploring our models' prediction performance via out-of-sample 
 predictive $$R^2$$ and discuss predictability across different subsamples of our data.
 
-* Tables:
+* Table1:
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table1.jpg) 
 > * 将样本进行 SOEs 和 non-SOEs 分类的原因：
  As state-owned enterprises (SOEs) play an prominent in China's capital markets and are
@@ -127,6 +127,9 @@ LASSO, and Enet, nearly double their performance.
 they are easily dominated by <font color=red>a naive forecast of zero returns</font>
 for all stocks in all periods.
 
+<br/>
+
+* Table2:
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table2.jpg)
 > * 表明机器学习方法可以在更长的时间内成功地隔离持续风险溢价: We find that the annual
 out-of-sample R^2 are higher than their monthly counterparts, indicating machine learning
@@ -134,4 +137,13 @@ methods can successfully isolate persistent risk premiums at longer horizons.
 > *我们将短期可预测性（尤其是小型股）归因于散户投资者在中国股市中的突出作用。
 正如我们稍后将看到的，在较短的视野内，神经网络更加重视小盘股的波动性和动量相关变量，
 这可能反映了散户投资者的短期投机行为，以及他们的知名度也就是喜欢优先交易小型股 
+
+<br/>
+* Table4:
+
+> Given the large number of predictors, we next investigate whether certain predictors are more important than others. 
+To this end, we differentiate between the macroeconomic variables and the stock characteristics.
+>(鉴于预测因素数量众多，我们接下来研究某些预测因素是否比其他预测因素更重要。为此，我们区分了宏观经济变量和股票特征。 )
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table4.jpg)
+>
  
