--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -80,6 +80,10 @@ and the literature on China-specific factors.
 > Using <font color=red>Kronecker product</font> (直乘) to represent the interaction terms 
 > between stock-level characteristics and the eleven macroeconomic predictors:
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/kron_predictors.jpg)
+> We first explore the variable importance of 11 macroeconomic variables and  
+> 94 stock characteristics for all prediction models based on the Chinese stock market.
+> The variable improtance is defined similarly as in [Gu et al. (2020b)](https://doi.org/10.1093/rfs/hhaa009).
+
 
 
 ### Empirical analysis
@@ -139,11 +143,29 @@ methods can successfully isolate persistent risk premiums at longer horizons.
 这可能反映了散户投资者的短期投机行为，以及他们的知名度也就是喜欢优先交易小型股 
 
 <br/>
-* Table4:
 
+* Table4:
 > Given the large number of predictors, we next investigate whether certain predictors are more important than others. 
 To this end, we differentiate between the macroeconomic variables and the stock characteristics.
->(鉴于预测因素数量众多，我们接下来研究某些预测因素是否比其他预测因素更重要。为此，我们区分了宏观经济变量和股票特征。 )
+>(鉴于预测因素数量众多，我们接下来研究<font color=red>某些预测因素是否比其他预测因素更重要</font>。
+>为此，我们区分了宏观经济变量和股票特征。)
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table4.jpg)
->
+> * Table 4 reports the relative variable importance of our 11 <font color=red> macroeconomic variables </font>
+> * For PLS, ntis, which measure the level of <font color=red>issuance activity</font>, has the largest 
+variable importance. (对于 PLS, ntis 拥有最大的 variable importance)
+> * China has been adopting an approval-based IPO system ever since its stock market opened, and it is wellknown 
+that the China Securities Regulatory Commission often suspends or reduces the volume of  IPOs when the market is 
+down, making it reasonable for ntis to play an important role in predicting monthly returns.  (中国自股票市场开放以来一直采用基于批准的IPO制度，
+众所周知，<font color=red>中国证监会经常在市场下跌时暂停或减少IPO数量</font>，这使得NTI在预测月度回报方面发挥重要作用是合理的。 )
+>* 值得注意的是 ntis 是 GBRT 最重要的 macroeconomic variable 同时也是 neural networks 第二重要的 variable.
+>* <font> 如何证明树模型能够检验出 predictors 之间复杂的非线性相互作用 </font> 
+(The distribution 
+of macroeconomic variable importance for tree models GBRT and RF is relatively more 
+uniform than other regression-based methods, indicating these two methods can detect 
+potentially complicated nonlinear interactions between macroeconomic variables and 
+stock characteristics) 与其他基于回归的方法相比，<font color=red>树模型GBRT和RF的宏观经济变量重要性
+分布相对更加均匀</font>，表明这两种方法可以检测宏观经济变量和股票特征之间潜在的<font color=red>复杂非线性相互作用</font>.
+ 
+* Figure 1:
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_figure1.jpg)
  
