--- a/_posts/2022-08-03-ch_vs_us.md
+++ b/_posts/2022-08-03-ch_vs_us.md
@@ -99,6 +99,17 @@ fiexible methods are required to account for the Chinese market's specificity.
 >
 >Cite from: [Machine-Learning in the Chinese Stock Market](https://doi.org/10.1016/j.jfineco.2021.08.017).
 
+### IOP
+>China has been adopting an approval-based IPO system ever since its stock market opened, 
+>and it is wellknown that the China Securities Regulatory Commission often suspends or 
+>reduces the volume of  IPOs when the market is down, 
+>making it reasonable for ntis to play an important 
+>role in predicting monthly returns. 
+>(中国自股票市场开放以来一直采用基于批准的IPO制度，众所周知，<font color=red>中国证监会经常在市场下跌时暂停或减少IPO数量</font>，
+>这使得NTI在预测月度回报方面发挥重要作用是合理的)。 
+
+
+
 ### long-short strategies
 > While most of the literature on <font color=red>factor investing</font> in
 > U.S. and European markets rely on long-short strategies, such a strategy is 
