--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -165,7 +165,18 @@ uniform than other regression-based methods, indicating these two methods can de
 potentially complicated nonlinear interactions between macroeconomic variables and 
 stock characteristics) 与其他基于回归的方法相比，<font color=red>树模型GBRT和RF的宏观经济变量重要性
 分布相对更加均匀</font>，表明这两种方法可以检测宏观经济变量和股票特征之间潜在的<font color=red>复杂非线性相互作用</font>.
+
+<br/>
  
 * Figure 1:
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_figure1.jpg)
+> * 图1汇总了每个宏观经济变量的模型变量重要性。总体而言，我们发现<font color=red>infl和NTI是预测中国股市月收益率的两个最常用的宏观经济变量</font>，
+尤其是神经网络。另一方面，股息价格比（dp）、市场波动率（svar）、每股总收益（ep）、期限利差（tms）和市场流动性（mtr）不太重要，
+因为大多数模型都忽略了它们。 
+
+<br/>
  
+* Figure 2:
+>![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_figure2.jpg)
+> * 关于整体变量重要性的排序，我们发现，在预测中国股市时，与市场流动性相关的股票特征最为相关，
+即流动性波动性（std-dolvol和std-turn）、零交易日（zerotrade）和非流动性测度（ill）是最显著的预测因子。  
