--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -232,8 +232,24 @@ performance than their alternatives, but the <font color=red>USPA test fails to 
 * Figure3
 > Dissecting the <font color=red>predictability performance</font> of NN4 (剖析<font color=red>NN4</font>的可预测性性能 ).
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_figure3.jpg)
-> *  
- 
+> *  Table1 - Table5 以及 Fig.1 - Fig.2 的结果表明，神经网络的predictability performance似乎优于其他模型
+这些算法一个经常提到的缺点就是缺乏可解释性。然而，作为一种理智检查，并提供一些关于哪些变量导致了 
+considerable predictability, 对可预测性的驱动因素进行深入的挖掘。
+为此，我们关注 NN4 模型 得到的 R^2_oos 值 在 samll stocks 和 large stocks 的 月度和年度的差异。
+> * Panel A, 纵轴表示： moving from the top 70% to the bottom 30% stocks for the monthly strategy
+绿色表示：moving 之后重要性增加，红色表示 moving 之后重要性减弱。
+> * Panel A, 使用NN4 的到 20 个最重要变量的差异 （使用 NN4 预测每月范围内前70% 和后 30% 的股票）。 
+> * Panel A, 当我们从大型股票转向小型股票时，三个最重要的predictor不会改变其重要性顺序: (1) _chempia_
+(2) _std_dolvol_ (3) _atr_ 。 当进入到 annual horizon, 这三个 predictors 的重要性会下降 （正如 Panel B 所示）。
+> * Panel A, for small stocks, while fundamental variables like cash, nincr, bm_ia, and orgcap obtain less weight.
+(zerotrade和std_turnorver等<font color=red>流动性相关</font>predictor对small stocks 的权重更大，
+而cash、nincr、bm_ia和orgcap等<font color=red>基本面相关变量</font>的权重对small stocks 较小) 
+> * Panel A, _idiovoal_ 的结果支持了有限套利理论 (theory of limited arbitrage: anomalies become stronger
+for high idiosyncratic risk stocks and hence, leading to increased overall predictability)  
+> * Panel A, _maxret_ 的结果也证实了我们的猜测: influence of retail investors on the price dynamics of 
+small stocks must be considerable. 如果投资者对与彩票式的回报有着强烈的偏好则极端正回报在股票的截面定价中
+显示出显著的可预测性 (As [Bali et al. (2011)](https://doi.org/10.1016/j.jfineco.2010.08.014) show, if there is a strong preference among investors
+for assets with lottery-like payoffs, extreme positive returns exhibit significant predictability in
+the <font color=red> cross-sectional pricing of stocks </font> ).  
 
- 
 
