--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -271,6 +271,38 @@ have significantly higher sales-to-price ratios relative to all other stocks.
 <br/>
 
 * Figure4
+> 我们没有进一步关注特定特征的重要性，而是<font color=red>决定将不同的特征收集到具有代表性的类别中</font>，
+>以避免分析潜在的异常值 (Instead of focusing further on the importance of specific characteristics, 
+> we decided to collect different characteristics into representative categories 
+> to avoid analyzing potential outliers)
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_figure4.jpg)
+> * 将因子分到10个类 (<font>ten different categories</font>): liquidity, momentum, ownership,
+size, volatility, earnings, beta, book-value ratios, growth, and leverage.
+> * Panel A : liquidity measures turn out to be the most crucial driver of monthly predictability.
+> * NN4 : 我们注意到，NN4（和其他神经网络）下的变量排名与所有预测模型的平均排名大不相同，
+后者更注重基本因素。相比之下，神经网络似乎更喜欢动量和波动因素而不是基本面因素。
+(We remark that the ranking of variables under NN4 (and other neural nets) is 
+quite different to the average ranking across all prediction models, 
+which puts more weight on the fundamental factors. 
+In contrast, neural nets seem to favor momentum and volatility factors over fundamentals.)
+> * Panel B: Moving from a monthly to an annual forecast horizon, liquidity and momentum lose
+their importance in favor of ownership, growth, and leverage.
+> * 总的来说，神经网络NN4对不同rm特征及其类别的重要性与我们的直觉很好地吻合。
+此外，它<font color=red>有助于我们理顺小型和大型股票的可预测性之间的差异</font>。
+然而，与美国股市相比，中国股市的整体可预测性似乎仍然很大。
+(Overall, the importance that the neural network NN4 gives to the different firm characteristics 
+and their categories aligns well with our intuition. Moreover, it helps us to rationalize 
+the differences between the predictability of small and large stocks. However, the overall predictability 
+of the Chinese stock market appears still substantial compared to, e.g., the U.S. market.)
+> * 总的来说: 中国市场的整体可预测性可能来自卖空约束，这是中国市场的普遍特征。尤其地
+当散户投资者占主导地位时，与其他市场相比，这些约束可能进一步加强可预测性和潜在的定价过高
+(The overall predictability in the Chinese market might result from short-sale constraints, 
+which are a universal feature of the Chinese market. Especially
+when retail investors dominate, these constraints might further enforce predictability and 
+potential overpricing, compared to other markets)
 
+<br/>
+
+* Table6
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table6.jpg)
 
