--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -304,5 +304,22 @@ potential overpricing, compared to other markets)
 <br/>
 
 * Table6
+> 分析这种可预测性是否真的可以在考虑中国市场卖空约束和其他约束的投资组合策略中加以利用，
+> 将是一件有趣的事情 (It will be interesting to analyze whether this predictability can 
+> indeed be exploited in portfolio strategies that account 
+> for shortselling constraints and other restrictions in the Chinese market)
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table6.jpg)
+> * long-short portfolio: construct long-short portfolio following the scheme 
+in [Gu et al.(2020b)](https://doi.org/10.1093/rfs/hhaa009) 
+> * long-only portfolio: include the long-only portfolio which only holds stocks in the <font color=red>top decile</font>.
+> * Also report the performance of the 1/N-portfolio in which all stocks are equally-weighted.
+> * 整体来说：Table6 clearly demonstrate that machine learning techniques, especially neutral network 
+models, are advantageous for portfolio-level forecasts. 
+
+<br/>
+
+* Figure5
+> Cumulative log return of machine learning portfolios (full sample)
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_figure5.jpg)
+> * 
 
