--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -321,5 +321,25 @@ models, are advantageous for portfolio-level forecasts.
 * Figure5
 > Cumulative log return of machine learning portfolios (full sample)
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_figure5.jpg)
+> * 有趣的是，这两种方法的多空组合在2015年股市崩盘期间表现非常好，阴影区域显示了这一点。
+(It is intriguing to note that the long-short portfolio for these two methods 
+performs very well during the stock market crash in 2015, indicated by the shaded area.)
+> * COVID-19: The most recent global shock due to the <font color=red>COVID-19 pandemic</font> in early 2020 does
+not lead to a notable downturn in portfolio levels. 
+> * 所有机器学习投资组合的表现都优于1/N投资组合以及市场指数 (all the machine learning portfolios 
+outperform the 1/N portfolio as well as the market index)
+> * Figure5 和 Table6 证实了 [Gu et al. (2020b)](https://doi.org/10.1093/rfs/hhaa009) 的发现：
+neutral networks outperform all other models considered in their study.
+> * ! <font color=red> Sharpe ratio </font>: For the long-short portfolios, 
+it is noteworthy that we obtain substantially higher Sharpe ratios in the Chinese stock 
+market than those in the U.S. market found in [Gu et al. (2020b)](https://doi.org/10.1093/rfs/hhaa009).
+> * ! <font color=red> Sharpe ratio </font>: the highest Sharpe ratio for the long-only 
+portfolio is 1.76, still higher than the long-short strategy in the U.S. market.
+
+<br/>
+
+* Table8
+> SOEs and non-SOEs
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table8.jpg) 
 > * 
 
