--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -340,6 +340,18 @@ portfolio is 1.76, still higher than the long-short strategy in the U.S. market.
 
 * Table8
 > SOEs and non-SOEs
+> 有趣的是，国有企业的可预测性如何体现在不同投资组合策略的绩效中。
+> (It is interesting to see how the SOEs' predictability manifests in different
+> portfolio strategies' performance)。
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table8.jpg) 
-> * 
+> * 首先，我们注意到，在夏普比率方面，国有企业的多空策略表现远远高于前70%的股票，尤其是神经网络。
+> * 使用适当的预测算法，我们可以成功地缓解之前文献中关于国有企业会产生更大的碰撞风险的担忧。
 
+<br/>
+
+* Table9
+> Transaction cost (交易成本)
+> 为了评估投资组合绩效的经济意义，我们最终必须在分析中纳入交易成本。
+>![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table9.jpg) 
+> * 交易成本包括：commission (佣金), stamp tax (印花税),  slippage (滑点).
+> * 
