--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -354,4 +354,25 @@ portfolio is 1.76, still higher than the long-short strategy in the U.S. market.
 > 为了评估投资组合绩效的经济意义，我们最终必须在分析中纳入交易成本。
 >![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table9.jpg) 
 > * 交易成本包括：commission (佣金), stamp tax (印花税),  slippage (滑点).
-> * 
+> * 这里我们采用两种交易策略来量化出滑点的大小 (Here, considering two trading shcemes to quantify the 
+size of slippage
+> * 测量滑点方法一：time weighted average price (TWAP): 给定月份第一个交易日的前30分钟的time weighted 
+平均价格，因为我们假设订单平均分配，并在每分钟开始时执行，并且是月度交易。 <font color = red>slippage = TWAP - open_price</font>.
+> * 测量滑点方法二：volume weighted average price (VWAP): 通过采用20天移动平均估算每分钟间隔的交易量，
+并根据预测交易量按比例执行订单。此外，我们通过计算股票交易量的5%来初略估计 market capacities. 
+> * 考虑买入和卖出后，TWAP 和 VWAP 与开盘价的总偏差约为 10 个基点。因此 25 个基点 （10+10+5） 可能是
+正常时期中国股市成本的合理估计。
+> * 采用保守的方法，考虑 20，40，60 和 80 个基点的交易成本，以考虑交易成本对投资组合绩效的影响。
+> * 交易成本分析表明，即使在交易成本规模的保守假设下，不同策略的绩效仍然具有经济意义。
+
+<br/>
+
+* Table11
+> Daily price limits
+> 每日限价规则在世界各地的证券交易所广泛使用，特别是在新兴市场，希望它们能作为一种市场稳定机制
+> [Deb et al. 2010](https://doi.org/10.1016/j.jbankfin.2010.04.001).
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/ML_ch_table11.jpg) 
+> * 考虑到我们的预测范围是一个月的远期收益率而不是日收益率，我们推测我们的主要结果将仅受到限价规则的轻微影响。
+> * 为了探索限价对投资组合绩效的影响，我们进行了以下工作。
+在每个再平衡日，我们<font color=red>排除了在买入目标价格上限收盘的股票，
+并将卖出目标推迟到价格不在价格下限的日期</font>。
