--- a/_posts/2022-08-03-ML_ch.md
+++ b/_posts/2022-08-03-ML_ch.md
@@ -376,3 +376,34 @@ size of slippage
 > * 为了探索限价对投资组合绩效的影响，我们进行了以下工作。
 在每个再平衡日，我们<font color=red>排除了在买入目标价格上限收盘的股票，
 并将卖出目标推迟到价格不在价格下限的日期</font>。
+
+### 结论：
+
+* 1 中国股市有一些显著 (remarkable) 的特征，例如国有企业的存在和散户投资者的主导地位，
+他们强烈偏好集体主义投资行为 (collectivistic investment behavior)。
+
+* 2 在这种投机市场中，我们预技术指标比基本面更重要。我们发现，最关键的因素是基于流动性的交易信号。
+
+* 3 令我们惊讶的是，基于价格动量的信号只起到了很小的作用。
+
+* 4 股票市场需要很多年才能发展出允许和鼓励基本面投资的品质(It takes many years for stock market
+to develop the qualities that allow and encourage fundamental investing )。中国股市正朝着这个方向
+发展，但我们的研究结果表明，今天，基本面因素已经是第二大关键因素。
+
+* 5 还发现，散户投资者的短期主义 (short-termism) 在短期投资范围内产生了很大的可预测性，特别是对小型股。
+
+* 6 由于政府信号在中国市场中发挥着如此重要的作用，观察到国有企业在更长的时间（longer horizons）
+内的可预测性大幅提高。
+
+* 7 不同的子样本在不同的时间范围内显示出不同的预测模式，这可能促使我们进一步探索散户投资者的角色。
+
+* 8 投资组合分析表明，短期内的高可预测性转化为 long-short 投资组合的高夏普率
+
+* 9 特别是神经网络和VASA在2015年中国股市崩盘期间也表现强劲。
+
+* 10 在中国市场做空股票是不现实的。因此，我们还分析了只做多的投资组合，发现其表现仍然具有经济意义
+
+* 11 总的来说，我们已经证明，机器学习方法可以（甚至更）成功地应用于与美国市场具有完全不同特征的其他市场。
+
+* 12 在确定了几个令人兴奋的研究途径之后，我们希望向研究界提供我们的数据可以简化这些努力，
+并进一步促进我们对金融市场，特别是中国市场的理解
