--- a/_posts/2022-08-08-OS_CSAP.md
+++ b/_posts/2022-08-08-OS_CSAP.md
@@ -110,12 +110,68 @@ tag: reading notes of financial studying
 
 ### 方法
 
-> Characteristic Selection 
+#### Characteristic Selection 
 
-* Table1:
+* Table1 PanelA:
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Table1_panelA.jpg) 
-> * characteristic
+> * characteristic 的选择依据于对三个方面的平衡，
+(1) 全面覆盖之前的研究 (comprehensive coverage of previous mata-studies)
+(2) 全面覆盖公司层面的截面预测因子 (comprehensive coverage of firm-level cross sectional predictors)
+(3) 以合理的时间完成高质量的代码和数据 (completion of high quality code and data with a reasonable 
+ amount of economist-hours)
+> * [Hou、Xue and Zhang（2020）](https://doi.org/10.1093/rfs/hhy131) -> 240 predictors
+> * [MCLean and Pontiff (2016)](https://doi.org/10.1111/jofi.12365) +   [Green, Hand, Zhang (2017)](https://doi.org/10.1093/rfs/hhx019) ->  49 characteristics
+> * [Harvey, Liu, and Zhu (2016)](https://doi.org/10.1093/rfs/hhv059) -> 30 characteristics in firm-level 
+> * total of 319 characteristics drawn from 153 papers.
+> * 我们没有 cover [MCLean and Pontiff (2016)](https://doi.org/10.1111/jofi.12365) +   [Green, Hand, Zhang (2017)](https://doi.org/10.1093/rfs/hhx019)
+中全部的 characteristics 是因为基于我们的第三个考量也就是在合理的时间完成高质量的代码
+> * 在添加HLZ（[Harvey, Liu, and Zhu (2016)](https://doi.org/10.1093/rfs/hhv059) ）的特征时，
+我们要求在原始文件中明确显示该特征，以预测公司层面的股票回报。选择特征时对公司层面的这一要求
+排除了许多只以投资组合回报为目标的papers, 
+因为只以投资组合回报为目标是20世纪90年代之前资产定价论文的一个普遍特征 (
+[Chan Chen and Hsieh 1985](https://doi.org/10.1016/0304-405X(85)90008-X), 
+[Chen Roll and Ross 1986](https://www.jstor.org/stable/2352710) ) 
+并且这在宏观驱动的文章中更常见 (
+[Vassalou 2003](https://doi.org/10.1016/S0304-405X(02)00248-9), 
+[Balvers and Huang 2007](https://doi.org/10.1016/j.jfineco.2006.09.004)). 
+这样的考量是来源于我们的第二个目标：covering firm-level predictors.
+> * 值得注意的是遵循我们第一个目标，我们不要求对[Hou、Xue and Zhang（2020）](https://doi.org/10.1093/rfs/hhy131)
+、[MCLean and Pontiff (2016)](https://doi.org/10.1111/jofi.12365)
+或[Green, Hand, Zhang (2017)](https://doi.org/10.1093/rfs/hhx019) 的特征<font color=red>具有明确的企业级可预测性</font>。
+因此，纯粹基于原始研究的结果，我们的特征在预测能力上有很大差异。
+
+#### Characteristic Construction
+
+* Table1 PanelB
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Table1_panelB.jpg) 
+> * 我们尽量紧跟原始文件。我们的目标是 [ Welch (2019) ](http://dx.doi.org/10.1561/104.00000082) 
+意义上的 <font color=red>"复现" </font> (reproductions), 避免重新评估原始论文的有效性。
+> * 我们认为 extensions 和 reexamination 需要 focused studies([Pontiff and Singla 2019](),
+ [Novy-Marx and Velikov Forthcoming]() ), 而这并不适合像我们这样大规模的 meta-study. 
+> * 事实上，正如我们很快解释的那样，<font color=red>我们的大规模研究需要偏离原始论文 </font>,
+即使是小规模的研究，完美的复制也是不可能的。WRDS对HML的复制与Ken French的数据具有98.9%的相关性，
+但在特定月份，月收益仍有高达1%的偏差（Vora和Palacios，2010）  
+> * 因此，我们的复现(reproduction)可以更好地描述为<font color=red>"尝试复现"(attempted reproduction)</font>,
+但为了便于阅读，我们通常会在整个文本中删除尝试(attempted)修饰语
+> * 我们标准化了一些<font color=red>复现流程</font>，以保持文献级结果的透明度以及数据的可用性。
+> * 所有特征均以每月频率计算，对于更新频率较低的变量，月值是最近观察到的值。
+这允许以较低的频率更新投资组合，同时保持替代实现的灵活性。
+然而，<font color = red>我们的月度特征意味着我们偏离了少数使用每周再平衡的研究</font>。
+> * 对于几乎所有特征，我们对年度会计数据可用性使用标准六个月延迟，
+对季度会计数据可用度使用标准四分之一延迟。
+在一些案例中，我们使用收益报告日期（RDQ）来表示季度数据的可用性，以便更紧密地匹配原始文件。
+对于IBE，我们假设在统计期结束日期之前可以获得收益估计。
+其他数据假设在原始论文之后可用。由于这种标准化，我们偏离了一些使用更短数据延迟的会计研究
+> * 许多特征仅在数据的特定子集中显示为预测性。
+我们尝试将此子集设置推迟到投资组合生成步骤。
+因此，特征代码和数据省略了价格和交换过滤器(filters)，这将
+而是在投资组合生成中强制执行
+> * 然而，<font color=red>其他过滤器非常多样化，很难在投资组合阶段实现</font>。
+有几篇论文排除了基于SIC代码或缺失会计数据的股票。
+还有一些人发现，<font color=red>预测性仅存在于基于特定特征的股票子集中（Piotroski 2000；Elgers、Lo和Pfeiffer 2001）</font>。
+为了以可管理的方式容纳这些过滤器(filters)，
+我们在特征代码中设置了不满足这些过滤器的缺货月份。
+> * 
 >
->
->
->
+
+### Characteristic-Level Reproduction Performance
