--- a/_posts/2022-08-08-OS_CSAP.md
+++ b/_posts/2022-08-08-OS_CSAP.md
@@ -171,7 +171,66 @@ tag: reading notes of financial studying
 还有一些人发现，<font color=red>预测性仅存在于基于特定特征的股票子集中（Piotroski 2000；Elgers、Lo和Pfeiffer 2001）</font>。
 为了以可管理的方式容纳这些过滤器(filters)，
 我们在特征代码中设置了不满足这些过滤器的缺货月份。
-> * 
->
+> * 在少数情况下，我们在 trade off costs and benefits 方面偏离了原始文献。
+大多数情况下，偏离原始文章中的结果是因为没有获得原始论文中使用的数据。
+例如，[Barber et al. (2001)](https://doi.org/10.1111/0022-1082.00336) 
+和 [Jegadeesh et al. (2004)](https://doi.org/10.1111/j.1540-6261.2004.00657.x) 
+使用了 Zack's 的 analyst recommendations data (<font color=red>分析师建议数据</font>), 
+该数据比 IBES 建议的 WRDS 数据更加容易获得。 
+> * 有一些其他偏差更为特殊，我们的predictors 中有一个 predictor 是 
+"number of consecutive earnings increases" (<font color=red>连续收入增加的次数</font>)
+与 [Loh andWarachka（2012）](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1343451) 中的 
+"earning streak predictor"(<font color=red>盈利趋势预测值</font>)相距甚远。
+> * 我们所有的 "price delay predictors" (<font color=red> 价格延迟预测因子 </font>)
+（[Hou和Moskowitz，2005年](https://www.jstor.org/stable/3598084) ）
+都使用单只股票每日收益的滚动回归，而原始论文通常使用两阶段程序，首先估计单只股票价格延迟的噪声度量，
+然后通过对第一阶段形成的投资组合进行第二组回归来降低噪声。
+我们使用更简单的价格延迟估计，这主要是由于我们的economist-hours预算。
+> * 这些偏差意味着，在少数情况下，我们reproduced的投资组合与
+原始投资组合相差甚远。我们将这些attempted reproductions包括在内，以保持公开性，
+我们认为这对本报告的可信度很重要.
+
+#### Portfolio Construction
+
+* ! 
+> * 我们的投资组合数据的核心包括根据原始文献构建的的predictive long-short portfolios。
+与其他可预测性研究(predictability studies)一样，我们 <font color=red>隐式假设t月底的
+数据可用于在t月最后一天的收盘拍卖中进行交易</font>。
+这些是我们在评估 reproduction success 时使用的投资组合。
+> * 使用原始论文的结果，我们选择股票权重、再平衡频率和分位数排序（如果适用）。
+我们手工收集的数据中列出了每个投资组合实现。再一次，为了规范我们的代码和结果，
+少数情况下，我们偏离了原始文献构建投资组合的scheme。最值得注意的偏差(deviation)是，
+我们<font color=red>使用简单的等权十分位数投资组合来reproduce 
+([Frazzini和Pedersen（2014）](https://doi.org/10.1016/j.jfineco.2013.10.005) )对beta的押注，
+而不是原始构造，其中每个股票根据其beta排名进行加权</font>。
+> * 我们还提供具有 alternative rebalancing
+(替代再平衡频率) 和 liquidity screens (流动性筛选) 的投资组合实施，
+以及十分位数排序和仅价值加权的投资组合。
+我们提醒用户，这些替代实现并没有像原始论文之后的投资组合那样被仔细检查。
+> * 在我们的基准数据中，我们 sign our portfolios (不 sign 我们的特征)，
+但 sign our portfolios (签署我们的投资组合)。
+也就是说，<font color = red>较高的特质波动率特征意味着较低的平均回报，
+但相应的多空组合具有正的平均回报</font>。
+手工收集的数据具有这种 sign information (符号信息)，<font color = red>如果这种信息适合用户的应用，
+用户可以将其应用于变换特征</font>。
+为简单起见，如果原始文件未提供正确 sign 的直接证据，我们不会 sign 投资组合。
+(这里的 sign 应该就是指买入或者卖出)
+
+#### Predictability Categories
+
+* ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure1.jpg) 
+> * 为了确定可预测性类别，我们将原始论文的结果与我们的 characteristic reproduction 
+(特征再现代码)进行比较。
+> * <font color=red>原始论文结果是手工收集的</font>。
+我们手工收集了 key table (关键表格)，
+ demonstrating predictive power(展示了预测能力)、
+ the empirical test used (使用的实证检验)、
+ the sign of predictability (可预测性符号)、
+ mean return (平均回报)、t-stat、
+ individual stock weighting (个股权重)、
+ portfolio sort quantile (投资组合排序分位数)、rebalancing frequency (再平衡频率)等。
+图1显示了我们的电子表格的节选以供说明。
+
+
 
 ### Characteristic-Level Reproduction Performance
