--- a/_posts/2022-08-08-OS_CSAP.md
+++ b/_posts/2022-08-08-OS_CSAP.md
@@ -262,11 +262,41 @@ evidence only).
 > * 类似地，如果原始论文在univariate regression(<font color=red>单变量回归</font>)
 中发现t-stat为2.6，则很难说reproduced long-short portfolio(<font color=red>复现多空组合</font>)
 是否也会产生t-stat>1.96。  
->* 另一方面，我们的 characteristics code 和 原始论文的偏差也会导致产生 “Likely predictors”,
+> * “Likely predictors:” 另一方面，我们的 characteristics code 和 原始论文的偏差也会导致产生 “Likely predictors”,
 这就需要进行微妙和谨慎的判断。
-> * “Indirect signals” 同样也是充满技巧的。 
+> * “Indirect signals”: 同样也是充满技巧的。 我们的大多数的 “Indirect signals” 是来自于对
+其他特征的修改，这样的修改是否应该增加或者减少 t-stat 需要判断。
+> * “Indirect signals”: 使问题复杂化的是，<font color=red>一些 “Indirect signals” 来来源于对 “likely predictors”
+和 “Not-Predictors” 的修改</font>，这意味着需要多个判断步骤来确定我们的 long-short portfolio 应该落在
+t-stat = 1.96 的哪一边。 
+> * 对 characteristic 的分类是有帮助的，因为分析 “clear predictors” 和 “likely predictors” 
+的方式和分析 other characteristics 的方式不一样。 (This separation is helpful because of clear and 
+likely predictors are quite distinct from the other characteristics in how one should analyze them.)
+> * 事实上，我们的 “Not-Predictors” 和 “Indirect-Signals” 
+大部分都来自于 [Hou, Xue, and Zhang (2020)](https://doi.org/10.1093/rfs/hhy131). 
+
+### Literature-Level Reproduction Performance
+
+* Figure2
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure2.jpg)
+>
+>
+>
 
 
+* Figure3
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure3.jpg)
+>
+>
+>
+>
 
+
+* Figure4
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure4.jpg)
+>
+>
+>
+>
 
 ### Characteristic-Level Reproduction Performance
